# sum4u

./: .gitignore  API_KEY_CONFIG.md  CHANGELOG.md  CONFIG_GUIDE.md  Dockerfile  Dockerfile.beginner  PROJECT_STRUCTURE.md  QWEN.md  README.md  RECORDING_SUMMARY_FEATURE.md  SKILL.md.backup  SKILL_updated.md  SKILL_updated_final.md  USAGE_EXAMPLES.md  batch_process.sh  batch_process_douyin.py  build_and_run.sh  config.json  config_example.json  docker-compose-simple.yml  docker-compose.yml  docker_setup_simple.sh  pyproject.toml  requirements.txt  setup_api_keys.py  skill_definition.md  start.sh  start_audio.sh  start_original.sh  start_webui.sh  start_webui_modified.sh  项目功能总结.md
audio-video-summarizer/scripts/: batch_process.sh  requirements.txt  start.sh  start_audio.sh
audio-video-summarizer/scripts/src/: audio.py  batch_processor.py  transcribe.py  utils.py  webui.py
src/: audio.py  audio_handler.py  batch_processor.py  config.py  douyin_handler.py  main.py  prompts.py  summarize.py  transcribe.py  utils.py  webui.py
